--- a/react_app/server/package.json
+++ b/react_app/server/package.json
@@ -5,7 +5,7 @@
         "graphql": "^16.6.0"
     },
     "scripts": {
-        "start": "node app",
-        "dev": "nodemon app.js"
+        "start": "node server",
+        "dev": "nodemon server.js"
     }
 }
