--- a/react_app/server/package.json
+++ b/react_app/server/package.json
@@ -1,8 +1,12 @@
 {
     "dependencies": {
+        "cors": "^2.8.5",
         "express": "^4.18.2",
         "express-graphql": "^0.12.0",
-        "graphql": "^16.6.0"
+        "graphql": "^16.6.0",
+        "mysql": "^2.18.1",
+        "mysql2": "^2.3.3",
+        "sequelize": "^6.25.3"
     },
     "scripts": {
         "start": "node server",
