--- a/react_app/server/package.json
+++ b/react_app/server/package.json
@@ -1,9 +1,14 @@
 {
     "dependencies": {
+        "@babel/preset-env": "^7.19.4",
+        "@babel/preset-react": "^7.18.6",
+        "@babel/register": "^7.18.9",
+        "apollo-server-express": "^3.10.3",
         "cors": "^2.8.5",
         "express": "^4.18.2",
         "express-graphql": "^0.12.0",
         "graphql": "^16.6.0",
+        "ignore-styles": "^5.0.1",
         "mysql": "^2.18.1",
         "mysql2": "^2.3.3",
         "sequelize": "^6.25.3"
