--- a/react_app/package.json
+++ b/react_app/package.json
@@ -25,6 +25,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
+    "serve":"serve -s build",
     "ssr": "node server/index.js"
   },
   "proxy": "http://localhost:8080",
