--- a/react_app/server/package.json
+++ b/react_app/server/package.json
@@ -11,7 +11,8 @@
         "ignore-styles": "^5.0.1",
         "mysql": "^2.18.1",
         "mysql2": "^2.3.3",
-        "sequelize": "^6.25.3"
+        "sequelize": "^6.25.3",
+        "winston": "^3.8.2"
     },
     "scripts": {
         "start": "node server",
